babbageprod/force-app/main/default/objects/Contact/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breast Cancer</fullName>
            </value>
            <value>
                <fullName>Skin Cancer</fullName>
            </value>
            <value>
                <fullName>Lung Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>