babbageprod/force-app/main/default/objects/Contact/fields/Number_of_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ratings__c</fullName>
    <label>Number of Ratings</label>
    <summaryForeignKey>Doctor_Survey__c.Doctor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>