babbageprod/force-app/main/default/objects/Contact/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Specialties</valueSetName>
    </valueSet>
</CustomField>