babbageprod/force-app/main/default/objects/Contact/fields/Total_Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating_Score__c</fullName>
    <label>Total Rating Score</label>
    <summarizedField>Doctor_Survey__c.Rating__c</summarizedField>
    <summaryForeignKey>Doctor_Survey__c.Doctor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>