babbageprod/force-app/main/default/objects/Contact/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <label>Customer</label>
</RecordType>