babbageprod/force-app/main/default/objects/Contact/recordTypes/Doctor.recordType-meta.xml
<RecordType>
    <fullName>Doctor</fullName>
    <active>true</active>
    <label>Doctor</label>
</RecordType>