babbageprod/force-app/main/default/objects/Contact/validationRules/Birthdate_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthdate_In_Past</fullName>
    <active>true</active>
    <errorConditionFormula>( Birthdate &gt;  TODAY() ) &amp;&amp;  (RecordType.Name == &quot;Customer&quot;)</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>The Customer&#39;s Birthdate must be in the past.</errorMessage>
</ValidationRule>