babbageprod/force-app/main/default/objects/Contact/validationRules/Contact_Have_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Have_Account</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( AccountId )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>You must enter an account for the contact.</errorMessage>
</ValidationRule>