babbageprod/force-app/main/default/objects/Contact/validationRules/Must_Have_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Email</fullName>
    <active>true</active>
    <description>Email must be populated.</description>
    <errorConditionFormula>ISBLANK( Email )</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>You must enter an email.</errorMessage>
</ValidationRule>